logging/fluentbit/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata: 
  name: daemon-fluentb
  namespace: monitoring
  labels:
    app.kubernetes.io/name: fluent-bit
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fluent-bit
  updateStrategy:
    type: RollingUpdate
  template: 
    metadata:
      labels:
        app.kubernetes.io/name: fluent-bit
    spec:
      containers:
        - name: fluentb-cont
          image: fluent/fluent-bit:2.2.2
          imagePullPolicy: IfNotPresent
          ports:
          resources:
            requests:
              cpu: "20m"
              memory: "40Mi"
            limits:
              cpu: "40m"
              memory: "80Mi"
          volumeMounts:
          - name: config
            mountPath: /fluent-bit/etc
          - name: varlog
            mountPath: /var/log
            readOnly: true
          - name: varlibdockercontainers
            mountPath: /var/lib/docker/containers
          - name: state
            mountPath: /var/fluent-bit/state
      volumes:
        - name: config
          configMap:
            name: fluent-bit-config
        - name: varlog
          hostPath:
            path: /var/log
            type: DirectoryOrCreate
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
            type: DirectoryOrCreate
        - name: state
          persistentVolumeClaim:
            claimName: pvc-log-fluntb
